2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm, perl/Amanda/Changer,
	  perl/Amanda/JSON/Changer.pm: s/look to be/looks to be/.

2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Fix bug found by coverity.

2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Speedup by checking all devices.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add message 1100025
	* perl/Amanda/Changer/robot.pm (verify): Report drive error.
	* server-src/amtape.pl: Handle message 1100025.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add message 1100024
	* perl/Amanda/Changer/robot.pm (verify): Report non-existant drive.
	* server-src/amtape.pl: Handle message 1100024.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Allow multiple values for the one
	  property.

2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: update xml file names
	* example/amandaclient-tcp.xml.in: rename this
	* example/amandaclient.xml.in: to this
	* example/amandaserver-tcp.xml.in: rename this
	* example/amandaserver.xml.in: to this

2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: include new files in dist tarball
	* example/amandaclient-tcp.xml.in, example/amandaserver-tcp.xml.in:
	  smf manifests for solaris >= 10

2013-11-18  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: AC_SUBST(SORT_PATH)
	* perl/Amanda/Constants.pm.in: Add SORT_PATH
	* perl/Amanda/Logfile.swg: Add getindexfname
	* perl/Amanda/Message.pm: Add Amanda::Index::Message
	* perl/Amanda/Status.pm:: s/Message/Amanda::Status::Message/
	* perl/Amanda/Index.pm: New perl module to return index file and
	  header from index directory.
	* perl/Amanda/JSON/Index.pm: New JSON module.
	* perl/Amanda/JSON.pm: Add missing JSON modules.